--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout ('/layout/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
     <h1>Edit Campground</h1>
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
         <div>
             <label for="title">Title</label>
             <input type="text" id="title" name="campground[title]" value="<%=campground.title %>">
@@ -18,14 +9,10 @@
         </div>
         <div>
             <label for="location">Location</label>
-            <input type="text" id="location" name="campground[location]">
+            <input type="text" id="location" name="campground[location]" value="<%=campground.location %>">
 
         </div>
-        <button>Add Campgrounds</button>
+        <button>Update Campgrounds</button>
 
     </form>
     <a href="/campgrounds/<%= campground._id%>">Back to Campgrounds</a>
-
-</body>
-
-</html>
