--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,19 +9,20 @@
 </head>
 
 <body>
-    <h1>All Campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
-    </div>
-    <ul>
-        <% for (let camp of campgrounds) {%>
-            <li>
-                <a href="/campgrounds/<%= camp._id %>">
-                    <%= camp.title %>
-                </a>
-            </li>
-            <% } %>
-    </ul>
+    <% layout ('/layout/boilerplate') %>
+        <h1>All Campgrounds</h1>
+        <div>
+            <a href="/campgrounds/new">Add Campground</a>
+        </div>
+        <ul>
+            <% for (let camp of campgrounds) {%>
+                <li>
+                    <a href="/campgrounds/<%= camp._id %>">
+                        <%= camp.title %>
+                    </a>
+                </li>
+                <% } %>
+        </ul>
 </body>
 
 </html>
