--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout ('layout/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-
-<body>
     <h1>
         <%= campground.title %>
     </h1>
     <h2>
         <%= campground.location %>
     </h2>
-    <footer>
+    <img src="<%= campground.image%>" alt="random">
+    <p>
+        <%= campground.description%>
+    </p>
+    <p>
         <a href="/campgrounds/<%= campground._id%>/edit">Edit</a>
-    </footer>
-</body>
+    </p>
+    <p>
+    <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
 
-</html>
+        <button>DELETE</button>
+    </form>
+
+    </p>
+    <footer>
+
+        <a href="/campgrounds">All Campgrounds</a>
+    </footer>
