--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,10 +14,10 @@
         <a href="/campgrounds/<%= campground._id%>/edit">Edit</a>
     </p>
     <p>
-    <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+        <!-- <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
 
         <button>DELETE</button>
-    </form>
+    </form> -->
 
     </p>
     <footer>
