--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,11 +2,11 @@
 
     <h1>Edit Campground</h1>
     <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
-        <div>
+        <!-- <div>
             <label for="title">Title</label>
             <input type="text" id="title" name="campground[title]" value="<%=campground.title %>">
 
-        </div>
+        </div> -->
         <div>
             <label for="location">Location</label>
             <input type="text" id="location" name="campground[location]" value="<%=campground.location %>">
