--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,11 +13,11 @@
                     <input class="form-control" type="text" id="location" name="campground[location]">
 
                 </div>
-                <div class="mb-3">
+                <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image</label>
                     <input class="form-control" type="text" id="location" name="campground[image]">
 
-                </div>
+                </div> -->
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" id="location" name="campground[location]"></textarea>
